--- a/flask_bootstrap/templates/index.html
+++ b/flask_bootstrap/templates/index.html
@@ -2,4 +2,6 @@
 {% block title %}index page{% endblock %}
 {% block page_content %}
 <h2> THIS IS FIRST PAGE!</h2>
+<p>The local date and time is {{ moment(current_time).format('LLL')}}.</p>
+<p>That was {{moment(current_time).fromNow()}}</p>
 {% endblock %}
