--- a/flask_bootstrap/templates/user.html
+++ b/flask_bootstrap/templates/user.html
@@ -2,5 +2,5 @@
 
 {% block title %}Flasky{% endblock %}
 {% block page_content %}
-        <h1>Hello, THIS IS user.html page</h1>
+        <h1>Hello {{ name }}, THIS IS user.html page</h1>
 {% endblock %}
